--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -52,12 +52,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.compose.material3:material3:1.1.0-rc01'
+    implementation 'androidx.compose.material3:material3:1.2.0-alpha01'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1' //?
     implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.1'
 
@@ -85,6 +85,8 @@ dependencies {
 
     implementation 'com.hivemq:hivemq-mqtt-client:1.3.0'
     implementation 'io.moquette:moquette-broker:0.15'
+//    implementation 'io.moquette:moquette-netty-parser:0.15'
+//    implementation 'io.moquette:moquette-parser-commons:0.15'
     implementation 'org.skyscreamer:jsonassert:1.5.1'
 }
 kapt {
